k8s/performance/sportapps-performance.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sportapps-ns

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sportapps-ingress
  namespace: sportapps-ns
  labels:
    app: sportapps-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
